# bead_gym

./: .bazelignore  .bazelrc  .gitignore  CONCEPT.md  README.md  WORKSPACE  chapter-12.ipynb  chapter-12.py  main.py  run_all_tests.sh  setup.py  todo.txt
beads_gym/beads/: BUILD.bazel  __init__.py  bead.cpp  bead.hpp  bead_group.cpp  bead_group.hpp  bead_group_unit_test.cpp  bead_unit_test.cpp  three_degrees_of_freedom_bead.cpp  three_degrees_of_freedom_bead.hpp  three_degrees_of_freedom_bead_unit_test.cpp
beads_gym/beads/python/: BUILD.bazel  bead.cpp  bead_test.py  beads.cpp  foo_test.py
beads_gym/bonds/: BUILD.bazel  bond.cpp  bond.hpp  distance_bond.cpp  distance_bond.hpp  distance_bond_unit_test.cpp
beads_gym/bonds/python/: BUILD.bazel  bonds.cpp  bonds_test.py
beads_gym/environment/: BUILD.bazel  beads_cart_pole_environment.py  beads_quad_copter_environment.py  environment.cpp  environment.hpp  environment.py  environment_unit_test.cpp  generic_environment.py
beads_gym/environment/integrator/: BUILD.bazel  integrator.cpp  integrator.hpp  integrator_unit_test.cpp
beads_gym/environment/python/: BUILD.bazel  environment.cpp  environment_cpp.cpp
beads_gym/environment/reward/: BUILD.bazel  reward.cpp  reward.hpp  reward_unit_test.cpp  stay_close_reward.cpp  stay_close_reward.hpp  stay_close_reward_unit_test.cpp
beads_gym/environment/reward/python/: BUILD.bazel  reward.cpp  rewards.cpp
beads_gym/foo/: BUILD.bazel  foo.cpp  foo.hpp  foo_test.cpp
beads_gym/foo/python/: foo.cpp
beads_gym/rl/: agents.py  noisy_strategies.py  policies.py
bp11/foo/: BUILD.bazel  foo.cpp  foo_test.cpp
configs/: main.yaml
configs/env/: generic.yaml  generic_with_bead_group.yaml  quad.yaml
dupa/: dupa.py
dupa/conf/: dupa.yaml
pure_lib/: mylib.py
pytests/: conftest.py  test_environment_cpp.py
pytests/outputs/2025-05-06/10-55-01/.hydra/: config.yaml  hydra.yaml
tryouts/: environment_cpp_tryout.py
