load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "bonds",
    srcs = [
        "bond.cpp",
        "distance_bond.cpp",
    ],
    hdrs = [
        "bond.hpp",
        "distance_bond.hpp",
    ],
    copts = ["-Iexternal/eigen"],
    #strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "@eigen",
        "//beads_gym/beads:beads",
    ]
)

cc_test(
    name = "all_unit_tests",
    srcs = [
        "distance_bond_unit_test.cpp",
    ],
    features = [
        "treat_warnings_as_errors",
        "strict_clang_tidy_warnings",
        "strict_warnings",
        "test_warnings",
    ],
    deps = [
        ":bonds",
        "@com_google_googletest//:gtest_main",
    ],
)
