load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "foo",
    srcs = ["foo.cpp"],
    hdrs = ["foo.hpp"],
    copts = ["-Iexternal/eigen"],
    #strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "@eigen"
    ]
)

cc_test(
    name = "foo_test",
    srcs = ["foo_test.cpp"],
    #copts = ["-Iexternal/gtest/include"],
    deps = [
        ":foo",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "all_unit_tests",
    srcs = [
        "foo_test.cpp",
    ],
    features = [
        "treat_warnings_as_errors",
        "strict_clang_tidy_warnings",
        "strict_warnings",
        "test_warnings",
    ],
    deps = [
        ":foo",
        "@com_google_googletest//:gtest_main",
    ],
)
