# Python wrapper for foo library.
load("@rules_python//python:defs.bzl", "py_test")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "environment",
    srcs = ["environment.cpp"],
    visibility = ["//beads_gym:__subpackages__"],
    deps = [
        "//beads_gym/environment:environment",
    ],
)

# py_test(
#     name = "bead_test",
#     size = "small",
#     srcs = ["bead_test.py"],
#     python_version = "PY3",
#     deps = [":bead"],
#     tags = ["unit"],
# )
