load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "rewards",
    srcs = [
        "stay_close_reward.cpp",
    ],
    hdrs = [
        "stay_close_reward.hpp",
    ],
    copts = ["-Iexternal/eigen"],
    #strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "@eigen",
        "//beads_gym/beads:beads",
        "//beads_gym/bonds:bonds",
    ]
)

cc_test(
    name = "all_unit_tests",
    srcs = [
        "stay_close_reward_unit_test.cpp",
        "stay_close_reward.cpp"
    ],
    features = [
        "treat_warnings_as_errors",
        "strict_clang_tidy_warnings",
        "strict_warnings",
        "test_warnings",
    ],
    deps = [
        ":rewards",
        "@com_google_googletest//:gtest_main",
    ],
)

