# Python wrapper for foo library.
load("@rules_python//python:defs.bzl", "py_test")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "rewards",
    srcs = ["rewards.cpp"],
    visibility = ["//beads_gym:__subpackages__"],
    deps = [
        "//beads_gym/environment/reward:rewards",
        "//beads_gym/beads:beads",
    ],
)
